<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>io.quarkiverse</groupId>
        <artifactId>quarkiverse-parent</artifactId>
        <version>20</version>
    </parent>
    <groupId>io.quarkiverse.web-bundler</groupId>
    <artifactId>quarkus-web-bundler-parent</artifactId>
    <version>999-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>Quarkus Web Bundler - Parent</name>
    <modules>
        <module>spi</module>
        <module>common-deployment</module>
        <module>qute-components</module>
        <module>runtime</module>
        <module>deployment</module>
    </modules>
    <scm>
        <connection>scm:git:git@github.com:quarkiverse/quarkus-web-bundler.git</connection>
        <developerConnection>scm:git:git@github.com:quarkiverse/quarkus-web-bundler.git</developerConnection>
        <url>https://github.com/quarkiverse/quarkus-web-bundler</url>
        <tag>HEAD</tag>
    </scm>
    <properties>
        <compiler-plugin.version>3.8.1</compiler-plugin.version>
        <maven.compiler.release>17</maven.compiler.release>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <esbuild-java.version>2.0.0-beta-3</esbuild-java.version>
        <quarkus.version>3.17.7</quarkus.version>
        <scrimage-core.version>4.1.1</scrimage-core.version>
        <quarkus-playwright.version>2.1.3</quarkus-playwright.version>
    </properties>
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>io.quarkus</groupId>
                <artifactId>quarkus-bom</artifactId>
                <version>${quarkus.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>io.mvnpm</groupId>
                <artifactId>esbuild-java-plugin-sass-locker</artifactId>
                <version>${esbuild-java.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>
    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>io.quarkus</groupId>
                    <artifactId>quarkus-maven-plugin</artifactId>
                    <version>${quarkus.version}</version>
                </plugin>
                <plugin>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>${compiler-plugin.version}</version>
                    <configuration>
                        <compilerArgs>
                            <arg>-parameters</arg>
                        </compilerArgs>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
    <profiles>
        <profile>
            <id>docs</id>
            <activation>
                <property>
                    <name>performRelease</name>
                    <value>!true</value>
                </property>
            </activation>
            <modules>
                <module>docs</module>
            </modules>
        </profile>
        <profile>
            <id>it</id>
            <activation>
                <property>
                    <name>performRelease</name>
                    <value>!true</value>
                </property>
            </activation>
            <modules>
                <module>integration-tests/locker</module>
                <module>integration-tests</module>
            </modules>
        </profile>
        <profile>
            <id>playwright-cli</id>
            <dependencies>
                <dependency>
                    <groupId>io.quarkiverse.playwright</groupId>
                    <artifactId>quarkus-playwright</artifactId>
                    <version>${quarkus-playwright.version}</version>
                </dependency>
            </dependencies>
        </profile>
    </profiles>
</project>
